[package]
name = "vcs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
clap = { version = "4.5.19", features = ["derive"] }
flate2 = "1.0.34"
lazy_static = "1.5.0"
predicates = "3.1.2"
regex-syntax = "0.8.5"
sha1 = "0.10.6"
tempdir = "0.3.7"
tempfile = "3.13.0"
thiserror = "1.0.64"
