[package]
name = "vcs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
assert_cmd = "2.0.16"
chrono = "0.4.38"
clap = { version = "4.5.19", features = ["derive"] }
colored = "2.2.0"
flate2 = "1.0.34"
hex = "0.4.3"
indicatif = "0.17.9"
lazy_static = "1.5.0"
predicates = "3.1.2"
rayon = "1.10.0"
regex = "1.11.1"
regex-syntax = "0.8.5"
reqwest = { version = "0.12.12" }
serde = { version = "1.0.218", features = ["derive"] }
serde_toml = "0.0.1"
sha1 = "0.10.6"
tempdir = "0.3.7"
tempfile = "3.13.0"
termcolor = "1.4.1"
thiserror = "1.0.64"
tokio = "1.43.0"
toml = "0.8.20"
url = "2.5.4"
walkdir = "2.5.0"
